<resources>
    <string name="app_name">G2H date converter</string>
    <string name="hi">Hi !</string>
    <string name="make_event">Make Event</string>
    <string name="pick_a_date">Pick A Date</string>
    <string name="all_events">All Events</string>
    <string name="convert">Convert</string>
    <string name="title_activity_display_events">Events</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="convert_hint">Convert a date</string>
    <string name="convert_to_add_hint">to add Events</string>
    <string name="dummy_day">04</string>
    <string name="feb_dummy">Feb</string>
    <string name="_2021">2021</string>
    <string name="event_title">Event Title</string>
    <string name="event_list">Event List</string>
    <string name="calendar">Calendar</string>
    <string name="date">Date</string>
    <string name="events">Events</string>
    <string name="fab_content_desc">Create Event</string>
    <string name="add_event">Add Event</string>
    <string name="event_description">Event Description</string>
    <string name="create">Create</string>
    <string name="colorListItemPurple">#783CAE</string>
    <string name="colorListItemRed">#AE3C4C</string>
    <string name="colorListItemBlue">#3C47AE</string>
    <string name="colorListItemCyan">#3CAE9F</string>
    <string name="colorListItemGreen">#44AE3C</string>
    <string name="colorListItemOrange">#C67000</string>
    <string name="colorListItemGrey">#5C5C5C</string>
    <string name="done">Done</string>
    <string name="delete_failed">Could not delete events at the moment</string>
    <string name="deleted">deleted</string>
    <string name="created_event">Created Event</string>
    <string name="internet_error">Check your Internet And try again</string>
    <string name="api_down">Date conversion service is down</string>
    <string name="event">Event</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="transaction_failed">Could not perform this action at the moment</string>
    <string name="are_u_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name_no_empty">Name cant be empty</string>
</resources>