<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bottom_collapse_shape"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable="true"
    android:paddingTop="16dp"
    android:paddingHorizontal="32dp"
    app:behavior_peekHeight="220dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_title"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:errorEnabled="true"

        android:layout_marginTop="16dp"

        >
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:maxLength="50"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_description"
        app:counterEnabled="true"
        app:counterMaxLength="200"
        android:layout_marginTop="16dp"
        >
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:layout_gravity="top"
        android:minLines="3"
        android:maxLength="200"
        android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_create"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/create"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto"
        app:cornerRadius="100sp"
        android:layout_marginBottom="16dp"
        />




</androidx.appcompat.widget.LinearLayoutCompat>