<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ConvertActivity">


<androidx.appcompat.widget.LinearLayoutCompat
    android:animateLayoutChanges="true"
    android:id="@+id/app_bar_expandable"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/top_collapse_shape"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_gravity="start"
        android:src="@drawable/ic_baseline_swap_calls_24"
        />

    <TextView
        android:id="@+id/text_app_bar_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorTextOnPrimary"
        android:textSize="28sp"
        android:text="@string/hi"
        android:layout_margin="16dp"

        />
    <TextView
        android:id="@+id/text_app_bar_sub_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorTextOnPrimary"
        android:textSize="28sp"
        android:layout_marginBottom="16dp"
        android:text="@string/pick_a_date"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_appBar_action"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_event"
        android:fontFamily="@font/roboto"
        app:cornerRadius="100sp"
        app:backgroundTint="@color/colorSecondary"/>

</androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_inside"
        style="@style/Widget.MaterialComponents.CircularProgressIndicator.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:indeterminate="true"
        android:translationZ="22dp"
        android:visibility="visible"

        app:indicatorColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_convert"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/convert"
        android:translationZ="1dp"
        android:fontFamily="@font/roboto"
        app:cornerRadius="100sp"
        app:backgroundTint="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_events"

        >
    </com.google.android.material.button.MaterialButton>

    <com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker
        android:id="@+id/date_picker"
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:layout_marginBottom="32dp"
        android:paddingHorizontal="16dp"

        app:layout_constraintBottom_toTopOf="@id/button_convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_expandable"
        app:layout_constraintVertical_bias="1.0"
        app:picker_curved="true"
        app:picker_cyclic="true"
        app:picker_displayDays="false"
        app:picker_displayDaysOfMonth="true"
        app:picker_displayHours="false"
        app:picker_displayMinutes="false"
        app:picker_displayMonth="true"
        app:picker_displayMonthNumbers="false"
        app:picker_displayYears="true"
        app:picker_selectedTextColor="@color/colorTextOnLight"

        app:picker_textColor="@color/colorTextOnLight"
        app:picker_visibleItemCount="7" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_events"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/all_events"
        android:fontFamily="@font/roboto"
        app:cornerRadius="100sp"
        android:paddingEnd="16dp"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        app:backgroundTint="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>