<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="androidx.core.content.ContextCompat"/>
        <variable
            name="event"
            type="com.ts.grp.g2hdateconverter.repository.model.Event" />
        <variable
            name="date"
            type="com.ts.grp.g2hdateconverter.repository.apiclient.pojo.CalendarDate" />
        <import type="android.view.View"/>
        <variable
            name="isFirstEventOfDay"
            type="Boolean"
            />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_day_texts"
            android:visibility="@{isFirstEventOfDay? View.VISIBLE: View.INVISIBLE}"
            android:layout_width="128dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp">

                <TextView
                    android:id="@+id/text_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:includeFontPadding="false"
                    android:text="@{date.day}"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    tools:text="@string/dummy_day"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/text_weekday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/black"
                    android:alpha="0.6"
                    android:includeFontPadding="false"
                    android:textSize="28sp"
                    app:autoSizeTextType="uniform"
                    android:text="@{date.weekday.en}"
                    tools:ignore="RtlSymmetry"
                    tools:text="Sun"/>
            </LinearLayout>

            <LinearLayout

                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp">

                <TextView
                    android:id="@+id/text_month"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:text="@{date.month.en.substring(0,3)}"
                    android:includeFontPadding="false"
                    android:alpha="0.7"
                    app:autoSizeTextType="uniform"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    tools:text="@string/feb_dummy"/>

                <TextView
                    android:id="@+id/text_year"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    android:alpha="0.6"
                    android:paddingStart="8dp"
                    android:text="@{date.year}"
                    app:autoSizeTextType="uniform"
                    android:includeFontPadding="false"
                    android:textSize="24sp"
                    tools:text="@string/_2021"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/circle_selectable"
            android:layout_width="16dp"
            android:visibility="@{isFirstEventOfDay? View.VISIBLE: View.INVISIBLE}"
            android:layout_marginTop="6dp"
            android:background="@drawable/ic_bordered_circle"
            android:layout_height="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@{event.name}"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"
            app:cornerRadius="100sp"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_16"
            tools:text="@string/event_title" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>